--- a/.hintrc
+++ b/.hintrc
@@ -22,6 +22,8 @@
       {
         "image-alt": "off"
       }
-    ]
+    ],
+    "highest-available-document-mode": "off",
+    "button-type": "off"
   }
 }
